@@ -94,13 +94,23 @@ class CafeApplicationTests {
 	}
 
 	@Test
-	@DisplayName("저장되어 있는 모든 구매내역 조회")
+	@DisplayName("저장되어 있는 모든 주문자 정보 조회")
 	void findAllOrders() {
 
 		List<Orders> ordersList = ordersRepository.findAll();
 
 		assertThat(ordersList).isNotNull();
 		assertThat(ordersList.size()).isGreaterThan(0);
+	}
+
+	@Test
+	@DisplayName("저장되어 있는 모든 구매내역 조회")
+	void findAllOrdersItems() {
+
+		List<OrdersItem> ordersItemsList = ordersItemRepository.findAll();
+
+		assertThat(ordersItemsList).isNotNull();
+		assertThat(ordersItemsList.size()).isGreaterThan(0);
 	}
 
 	@Test
@@ -354,34 +364,39 @@ class CafeApplicationTests {
 		// 당일 오후 2시 이전에 주문 (카페라떼)
 		OrdersItem ordersItemBefore2pm = OrdersItem.builder()
 				.orders(orders)
+				.orderProductPrice(1000)
 				.orderProductId(2L)
 				.orderProductName("카페라떼")
 				.quantity(2)
+				// (임시 값이므로 변경 필수)
 				.orderDate(LocalDateTime.of(2025, 2, 20, 8, 30))
 				.build();
 
-		orders.addOrdersItem(ordersItemBefore2pm);
 		System.out.println("서비스 저장 b");
 		ordersItemRepository.save(ordersItemBefore2pm);
+		orders.addOrdersItem(ordersItemBefore2pm);
 
 		// 당일 오후 2시 이후에 주문 (아이스티)
 		OrdersItem ordersItemAfter2pm = OrdersItem.builder()
 				.orders(orders)
+				.orderProductPrice(1000)
 				.orderProductId(3L)
 				.orderProductName("아이스티")
 				.quantity(4)
-				.orderDate(LocalDateTime.of(2025, 2, 21, 13, 30))
+				// (임시 값이므로 변경 필수)
+				.orderDate(LocalDateTime.of(2025, 2, 21, 14, 30))
 				.build();
 
-		orders.addOrdersItem(ordersItemAfter2pm);
-		System.out.println("서비스 저장 c");
-		ordersItemRepository.save(ordersItemAfter2pm);
+		System.out.println("추가한 시간"+ordersItemAfter2pm.getOrderDate());
 
-		// 변수 ctime 설정
-		OrdersItemService.setCtime(10);
+		ordersItemRepository.save(ordersItemAfter2pm);
+		orders.addOrdersItem(ordersItemAfter2pm);
+
+		// 변수 ctime 설정 (임시 값이므로 변경 필수)
+		OrdersItemService.setCtime(14);
 
 		// 배송 메서드 실행
-		List<Orders> deliveryOrders = ordersItemService.findOrdersDuring2pm();
+		List<OrdersItem> deliveryOrders = ordersItemService.findOrdersDuring2pm();
 		/*
 		해당 메서드 로직에 스케줄러가 작동되는 시간을 조절하는 변수가 (* * * * *)
 		* */
@@ -392,12 +407,13 @@ class CafeApplicationTests {
 		if (deliveryOrders.isEmpty()) {
 			System.out.println("배송할 주문이 없습니다.");
 		} else {
-			for (Orders order : deliveryOrders) {
-				System.out.println("주문자 이메일: " + order.getEmail());
-				System.out.println("주문 상품");
-				for (OrdersItem orderItem : order.getOrdersItems()) {
-					System.out.println("상품명: " + orderItem.getOrderProductName() + ", 갯수: " + orderItem.getQuantity());
-				}
+			for (OrdersItem ordersItem : deliveryOrders) {
+				System.out.println("주문자 이메일: " + ordersItem.getOrders().getEmail());
+				System.out.print("주문 상품) ");
+
+				System.out.println("상품명: " + ordersItem.getOrderProductName() +
+						", 갯수: " + ordersItem.getQuantity() +
+						", 구매 시간: " + ordersItem.getOrderDate());
 			}
 		}
 
@@ -408,8 +424,8 @@ class CafeApplicationTests {
 		assertThat(deliveryOrders.size()).isEqualTo(4);
 
 		// 주문 가져오기
-//		Orders filteredDeliveryOrders = deliveryOrders.get(0);
-//		List<OrdersItem> filteredDeliveryOrdersItems = filteredDeliveryOrders.getOrdersItems();
+		OrdersItem filteredDeliveryOrders = deliveryOrders.getFirst();
+//		OrdersItem filteredDeliveryOrdersItems = filteredDeliveryOrders.getOrdersItems();
 
 	}
 
